Fix vertical code jump in narrow browser widths
[Finishes #58701180]

--- a/src/main/resources/static/css/responsive.css
+++ b/src/main/resources/static/css/responsive.css
@@ -138,9 +138,7 @@
     word-break: normal;
     word-wrap: normal;
     white-space: pre;
-    overflow-x: auto;
     max-width: 97%;
-    display: inline-block;
   }
 
   .mobile-navigation--wrapper .navigation-drawer--container {
